# Gosha-Drug

./: AI_ASSISTED_DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TECHNICAL_OVERVIEW.md  compose.yaml  pyproject.toml
assets/: README.md
data/: synthetic-benchmark-v1.jsonl  synthetic-challenge.jsonl  synthetic-eval.jsonl
docs/: architecture.md  evaluation-report.md  evidence-register.md  market-and-business-model.md  product-development-strategy.md  product-discovery.md  storage-profiles.md  technical-contract.md  telegram-first-scope.md  telegram-runtime.md  thesis-foundation.md  visual-brief.md
docs/research/: README.md  analysis-pipeline.md  decision-memo-template.md  desk-research-protocol.md  pre-registration.md  session-operations.md
evaluation/: challenge-report.json  controlled-report.json  synthetic-benchmark-v1-report.json
migrations/postgres/: 001_initial.sql  002_send_controls.sql  003_operational_controls.sql  004_participant_registry.sql  005_monthly_csat.sql
scripts/: check_public_export.py  check_readme_links.py  check_wheel_install.sh  export_public_repo.sh  generate_demo_gif.py  generate_synthetic_benchmark.py  run_all.sh  run_llm_evaluation.sh  run_quality.sh
src/gosha/: __init__.py  cli.py  config.py  evaluation.py  models.py  operator_cli.py  postgres_store.py  provider.py  repository.py  runtime_check.py  server.py  service.py  store.py  store_factory.py  telegram.py  time_rules.py  (+1 more)
tests/: test_benchmark_data.py  test_cli.py  test_core.py  test_domain_data.py  test_release_operations.py  test_telegram.py
(+3 files in other folders)
